--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,4 @@ dependencies {
     apt 'org.parceler:parceler:1.1.6'
 }
 
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
