add migration from category list / main activity to category detail activity, and wrap all categories in parcel along with position of chosen category

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.AddCategoryActivity"></activity>
+        <activity android:name=".ui.AddCategoryActivity" />
+        <activity android:name=".ui.CategoryDetailActivity"></activity>
     </application>
 
 </manifest>
